# erucakra

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
configs/: default.yaml  overshoot.yaml  ssp126.yaml  ssp245.yaml  ssp370.yaml  ssp585.yaml  template.yaml
forcings/: README.md  example_historical_ssp245.csv  ssp119.csv  ssp126.csv  ssp245.csv  ssp370.csv  ssp370_lowNTC.csv  ssp434.csv  ssp460.csv  ssp534.csv  ssp585.csv
src/erucakra/: __init__.py  cli.py
src/erucakra/core/: __init__.py  dynamics.py  model.py  results.py
src/erucakra/io/: __init__.py  csv_writer.py  forcing.py  netcdf_writer.py
src/erucakra/scenarios/: __init__.py  ssp.py
src/erucakra/utils/: __init__.py  config.py  logging.py
src/erucakra/visualization/: __init__.py  phase_space.py  timeseries.py
tests/: conftest.py  test_model.py
